# ag-atlas-agent

./: Dockerfile  README.md  agent.py  docker-compose.yaml  pyproject.toml
data/: CSA Manuals - Sheet1.csv  Mean_yield_difference.xlsx  Mean_yield_difference@1.csv  adoption_factors_20mar24.csv  figure_2_data@1.csv  mean_yield.txt  spotlight.txt  spotlight2_Extended Table 2.csv  spotlight2_Extended Table 2@1.csv
examples/: example_1_1.md  example_1_1.md.metadata
src/ag_atlas/: agent.py  context.py
src/ag_atlas/procedures/python3/: load_datasets.py
