[tool.poetry]
name = "ag-atlas-agent"
version = "0.1.0"
description = "An agent for exploring the Agriculture Adaptation Atlas"
authors = ["Brandon Rose <rose.brandon.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
archytas = "^1.1.7"
pandas = "^2.2.2"
easyrepl = "^0.1.3"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
