[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ag-atlas"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Brandon Rose", email = "brandon@jataware.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "beaker-bunsen>=0.0.6",
    "openpyxl",
    "seaborn"
]

[tool.hatch.build.hooks.bunsen]
require-runtime-dependencies = true

documentation_path = "documentation"
examples_path = "examples"

[tool.hatch.build.hooks.bunsen.libraries.python3]
seaborn = "A nice plotting tool"

[project.urls]
Documentation = "https://github.com/unknown/beaker-bdf#readme"
Issues = "https://github.com/unknown/beaker-bdf/issues"
Source = "https://github.com/unknown/beaker-bdf"

[tool.hatch.version]
path = "src/ag_atlas/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ag_atlas tests}"

[tool.coverage.run]
source_pkgs = ["ag_atlas", "tests"]
branch = true
parallel = true
omit = [
  "src/ag_atlas/__about__.py",
]

[tool.coverage.paths]
ag_atlas = ["src/ag_atlas", "*/beaker-bdf/src/ag_atlas"]
tests = ["tests", "*/beaker-bdf/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]